--- a/trabalho4/Index.html
+++ b/trabalho4/Index.html
@@ -26,7 +26,7 @@
         </section>
         <section>
             <h2>Contato</h2>
-            <p>Email: contato@ong.com</p>
+            <p>Email: DivulgueSua.Ong@gmail.com</p>
             <p>Telefone: (55) 92233-8691</p>
         </section>
     </main>
@@ -35,4 +35,5 @@
         <p>&copy; 2025 ONG. Todos os direitos reservados.</p>
     </footer>
 </body>
+
 </html>
